Moved libraries to lib directory Changed the cookie entries array to a JSON file The default event is now onDOMContentLoaded with the option to use onCompleted Use an array to strip out the generic subdomains instead of simply checking for www.

--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
     "manifest_version": 2,
     "description": "Automatically accept and hide cookie notifications.",
     "background" : {
-        "scripts": ["jsuri.js", "cookie-entries.js", "background.js"]
+        "scripts": ["libs/jsuri.js", "libs/json3.js", "background.js"]
     },
     "permissions": [
         "<all_urls>",
