--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,19 @@
     "version": "1.0",
     "manifest_version": 2,
     "description": "Automatically accept and hide cookie notifications.",
+    "browser_action": {
+        "default_icon": {
+            "19": "icon19.png",
+            "38": "icon38.png"
+        },
+        "default_title": "CooCooCookies",
+        "default_popup": "popup.html"
+    },
+    "icons": {
+        "16": "icon16.png",
+        "48": "icon48.png",
+        "128": "icon128.png"
+    },
     "background" : {
         "scripts": ["libs/jsuri.js", "libs/json3.js", "background.js"]
     },
